learning the basis

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<link rel="stylesheet" href="style.css">
+<body>
+    <p id="rouge">
+        Bonjour en rouge
+    </p>
+    <p id="bleu">
+        Bonjour en bleu
+    </p>
+    <a href="https://alphit7.github.io/Vcard/vcard.html" target="_blank">My Vcard</a>
+    <ol>
+        <li>Troisième</li>
+        <li>Gars du milieu</li>
+        <li>Premier</li>
+    </ol>
+</body>
