--- a/animation.html
+++ b/animation.html
@@ -25,7 +25,7 @@
         <br>
         <br>
         <br>
-        Ne touche pas aux animaux Ils ne t'ont rien fait mec<br>
+        Ils ne t'ont rien fait mec<br>
         Un peu de respect !
         <br>
         <br>
